--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   dartz: ^0.10.1
-  cloud_firestore: ^4.15.8
-  firebase_core: ^2.27.0
+  cloud_firestore: ^5.5.0
+  firebase_core: ^3.8.0
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
+  get_it: ^8.0.2
+  shimmer: ^3.0.0
+  flutter_form_builder: ^9.2.1
+  form_builder_validators: ^11.0.0
+  firebase_auth: ^5.3.3
+  firebase_storage: ^12.3.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
@@ -65,6 +72,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/Designer.png
+    - assets/pic.png
+    - assets/sairose.png
+    - assets/pngegg.png
+    
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -82,9 +95,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Robot
+    - family: Roboto
       fonts:
-        - asset: fonts/Robot-Regular.ttf
+        - asset: fonts/Roboto-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
