--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,7 +48,7 @@ dependencies:
   firebase_storage: ^12.3.6
   intl: ^0.19.0
 
-dev_dependencies:
+dev_dependencies: 
   flutter_test:
     sdk: flutter
 
@@ -74,7 +73,7 @@ flutter:
 
   assets:
     - assets/Designer.png
-    - assets/pic.png
+    - assets/raymond.png
     - assets/sairose.png
     - assets/pngegg.png
     
